vlib/v/parser/tests/comptime_path_not_found_err.vv
fn main() {
	tmp := $tmpl('tempate.txt')
	a := tmp
}
